--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.2.1",
     "ace-builds": "^1.4.12",
     "compile-run": "^2.3.2",
+    "node-sass": "^4.14.1",
+    "re-resizable": "^6.5.4",
     "react": "^16.13.1",
     "react-ace": "^9.1.2",
     "react-canvas-draw": "^1.1.1",
