--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-dom": "^16.13.1",
     "react-resizable": "^1.10.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-uuid": "^1.0.2",
+    "socket.io-client": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
