--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react-ace": "^9.1.2",
     "react-canvas-draw": "^1.1.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-resizable": "^1.10.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-uuid": "^1.0.2",
+    "redux": "^4.0.5",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
