--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "re-resizable": "^6.5.4",
     "react": "^16.13.1",
     "react-ace": "^9.1.2",
+    "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-canvas-draw": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
